<package>
  <name>wbot_gazebo</name>
  <version>1.0.0</version>
  <description>The wbot_gazebo package  </description>
  <author email="wyl410922@qq.com">Wang yanliang</author>
  <maintainer email="wyl410922@qq.com">Wang yanliang</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>gazebo</run_depend>
  <export>
    <architecture_independent />
  </export>
</package>