<package>
  <name>odom_to_tf_and_path</name>
  <version>1.0.0</version>
  <description>odom_to_tf_and_path</description>

  <maintainer email="yuki.kitsukawa@tier4.jp">Yuki KITSUKAWA</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_srvs</run_depend>

</package>
